# mitre-universal-agent

./: README.md  app.py  pyproject.toml
ai_providers/: __init__.py  base.py  mock.py
config/: default.json
core/: __init__.py  ai_orchestrator.py  config_store.py  mitre_engine.py  runtime.py  scheduler.py  source_manager.py
deploy/: install.sh  mitre-agent.service  uninstall.sh
docs/: Architecture.md
plugins/: __init__.py  base.py
plugins/manageengine/: __init__.py  plugin.py
plugins/splunk/: __init__.py  plugin.py
plugins/wazuh/: __init__.py  plugin.py
tests/: test_ai_orchestrator.py  test_control.py  test_hardening.py  test_integration.py  test_plugins.py  test_scheduler.py  test_wazuh_plugin.py
tests/mocks/: manageengine_logs.json  splunk_events.json  wazuh_alerts.json
webcontrol/: __init__.py  server.py
